[tool.poetry]
name = "hbmqtt-docker"
version = "0.1.0"
description = ""
authors = ["jaime <programmer.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hbmqtt = "^0.9.5"
pyopenssl = "^19.0"

[tool.poetry.dev-dependencies]
ipython = "^7.2"
rshell = "^0.0.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
